# labs

./: main.cpp
bureaucracy/: dnevnik.docx  dnevnikB.docx  otchet_Bolshakov.docx  otchet_Grin.docx
lab10/: CMakeLists.txt  lab10.cpp
lab7/: CMakeLists.txt  Func.cpp  Func.hpp  lab6.cpp
lab8/: CMakeLists.txt  lab8.cpp
lab9/: CMakeLists.txt  Round.cpp  Round.hpp  lab9.cpp
practice3/: CMakeLists.txt  input.txt  practice3.cpp
practice4/: CMakeLists.txt  practice4.cpp
practice5/: CMakeLists.txt  practice5.cpp
practice6/: CMakeLists.txt  practice6.cpp
project/: CMakeLists.txt  ball.cpp  ball.hpp  main.cpp  platform.cpp  platform.hpp  technical_requirements.txt
